# GitHub_class

./: .dockerignore  .env  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: google-cloudrun-docker.yml
