[tool.poetry]
name = "githib-class"
version = "0.1.0"
description = ""
authors = ["simongood <simongood2986@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
line-bot-sdk = "^3.14.5"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
